--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="button1">clickme</button>
     <script src="main2.js"></script>
 </body>
 </html>
